[gd_scene load_steps=12 format=3 uid="uid://dx6l6h0xbdrj6"]

[ext_resource type="Script" uid="uid://ewt8k6ikogvw" path="res://Blueslimee.gd" id="1_dt84e"]
[ext_resource type="Texture2D" uid="uid://dfsm3w0fccfqp" path="res://Slime walking.png" id="2_e1s7x"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_14twb"]
size = Vector2(27.5, 17.5)

[sub_resource type="AtlasTexture" id="AtlasTexture_h7fiy"]
atlas = ExtResource("2_e1s7x")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_1mce6"]
atlas = ExtResource("2_e1s7x")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_e1tc5"]
atlas = ExtResource("2_e1s7x")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_6dp2q"]
atlas = ExtResource("2_e1s7x")
region = Rect2(0, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_jx278"]
atlas = ExtResource("2_e1s7x")
region = Rect2(32, 32, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_rhq5r"]
animations = [{
"frames": [{
"duration": 1.3,
"texture": SubResource("AtlasTexture_h7fiy")
}, {
"duration": 1.3,
"texture": SubResource("AtlasTexture_1mce6")
}, {
"duration": 1.3,
"texture": SubResource("AtlasTexture_e1tc5")
}, {
"duration": 1.3,
"texture": SubResource("AtlasTexture_6dp2q")
}, {
"duration": 1.3,
"texture": SubResource("AtlasTexture_jx278")
}],
"loop": true,
"name": &"default",
"speed": 10.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_i8th2"]
size = Vector2(17, 4)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_fjqne"]
size = Vector2(29, 11.25)

[node name="Blue slime" type="CharacterBody2D"]
texture_filter = 1
slide_on_ceiling = false
script = ExtResource("1_dt84e")
Speed = 35
Chase_Speed = 80

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-6.25, 6.75)
shape = SubResource("RectangleShape2D_14twb")

[node name="Blue slime walking" type="AnimatedSprite2D" parent="."]
process_mode = 3
texture_filter = 1
texture_repeat = 2
position = Vector2(-5, -12)
scale = Vector2(1.64, 1.742)
sprite_frames = SubResource("SpriteFrames_rhq5r")
frame_progress = 0.200377
metadata/_aseprite_wizard_interface_config_ = {
"animation_section": true,
"layer_section": true,
"output_section": true,
"pending_changes": {},
"slice_section": true
}
metadata/_aseprite_wizard_config_ = {
"layers": [],
"o_ex_p": "",
"o_folder": "",
"o_name": "",
"only_visible": true,
"should_round_fps": true,
"slice": "",
"source": "C:/Users/loke.osterholm/Documents/Pixel Art/Slime walking.aseprite"
}
metadata/_aseprite_wizard_source_file_hash_ = "f0daee7de1ed712b4ab2901359d41d1b"

[node name="RayCast2D" type="RayCast2D" parent="Blue slime walking"]
scale = Vector2(0.46, 0.495)
target_position = Vector2(-125, 0)

[node name="Timer" type="Timer" parent="."]
wait_time = 10.0
one_shot = true

[node name="DamageHitbox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="DamageHitbox"]
modulate = Color(0, 0, 0, 1)
position = Vector2(-6.5, -1)
shape = SubResource("RectangleShape2D_i8th2")
debug_color = Color(0.960509, 0, 0.515628, 0.42)

[node name="AttackHitBox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackHitBox"]
modulate = Color(0, 1, 0.027451, 1)
position = Vector2(-6.5, 10.625)
shape = SubResource("RectangleShape2D_fjqne")

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="body_entered" from="DamageHitbox" to="." method="_on_attack_hitbox_body_entered"]
[connection signal="body_entered" from="DamageHitbox" to="." method="_on_damage_hitbox_body_entered"]
[connection signal="area_shape_entered" from="AttackHitBox" to="." method="_on_attack_hit_box_area_shape_entered"]
[connection signal="body_entered" from="AttackHitBox" to="." method="_on_attack_hit_box_body_entered"]
